--- a/Ecrit/Memoire Degives Nicolas/Content/2-Introduction.tex
+++ b/Ecrit/Memoire Degives Nicolas/Content/2-Introduction.tex
@@ -4,7 +4,7 @@
 Depuis quelques années, l’agriculture a dû ajouter à la liste de ses défis les dérèglements climatiques.
 En effet, les variations de température, la fréquence des événements météorologiques extrêmes tels que les sécheresses, les inondations et les tempêtes, ainsi que les changements dans les schémas de précipitations, ont des effets directs sur la production alimentaire mondiale.
 Les effets du climat se font déjà sentir dans de nombreuses régions du monde, entraînant des pertes de récoltes, une diminution de la qualité des aliments, une augmentation des maladies des cultures et une insécurité alimentaire croissante.
-L’agriculture se doit alors de s’adapter et aux dérèglements climatiques et trouver des moyens innovants de produire tout en préservant l’environnement. 
+L’agriculture se doit alors de s’adapter aux dérèglements climatiques et trouver des moyens innovants de produire tout en préservant l’environnement. 
 \newline
 
 Dans ce contexte de pressions croissantes sur les ressources naturelles, la recherche agricole doit se diriger vers des pratiques plus durables qui permettent une utilisation plus efficace des ressources, une réduction des émissions de gaz à effet de serre, une amélioration de la qualité des sols et de la biodiversité, et une plus grande résilience face aux chocs climatiques \citep{oecd_building_2021}.
