--- a/Ecrit/Memoire Degives Nicolas/Content/3-Context.tex
+++ b/Ecrit/Memoire Degives Nicolas/Content/3-Context.tex
@@ -25,7 +25,7 @@ Malgré les bonnes définitions des principaux mouvements et facteurs qui interv
 
 \noindent En effet, beaucoup de processus intervenant dans les flux hydriques ont pu être étudiés, compris et modélisés de façon précise.
 Cependant, la manière dont tous ces processus interagissent avec le temps, l'espace et entre eux reste encore assez méconnue.
-Ces différents processus sont aussi difficiles à mettre en relation du au fait qu'ils s'influencent les uns les autres et qu'ils peuvent, pour certains, être étudiés à des échelles très différentes.
+Ces différents processus sont aussi difficiles à mettre en relation dû au fait qu'ils s'influencent les uns les autres et qu'ils peuvent, pour certains, être étudiés à des échelles très différentes.
 \newline
 
 Les flux hydriques peuvent être améliorés face aux sécheresses à l'aide de plusieurs processus.
@@ -108,7 +108,7 @@ La figure \ref{fig:steep, cheap and deep} ci-dessous reprend les traits racinair
 
 L'architecture du système racinaire (ASR) est une composante principale pour la productivité et la survie de la plante.
 Celle-ci définit la quantité de ressources (eau et nutriments) qui est accessible par la plante dans un environnement dynamique et variable. 
-L'ASR peut se caractériser par de multiples paramètres et de plus en plus de recherche sont faites afin d'identifier les paramètres clés qui contribuent à une meilleure résilience hydrique.
+L'ASR peut se caractériser par de multiples paramètres et de plus en plus de recherches sont faites afin d'identifier les paramètres clés qui contribuent à une meilleure résilience hydrique.
 \newline
 
 \noindent \textbf{La profondeur}
@@ -139,16 +139,16 @@ Une racine ayant un plus grand diamètre est ainsi plus disposée à atteindre l
 
 \noindent \textbf{Tropisme}
 
-En adaptant son système racinaire en fonction de ces stimuli environnementaux, la plante maximise son accès aux ressources et cela participe à augmenter sa résilience dans le cas ou la présence d'eau ou nutriments est limitée.
+En adaptant son système racinaire en fonction des stimuli environnementaux, la plante maximise son accès aux ressources et cela participe à augmenter sa résilience dans le cas ou la présence d'eau ou nutriments est limitée.
 Les plantes réagissent différemment à ces stimuli et cette capacité d'adaptation peut représenter un atout en condition de manque de ressources.
-Il a entre autre été observé par \cite{gul_hydrotropism_2023} que différentes espèces/variétés peuvent avoir un hydrotropisme plus ou moins important illustrant ces différences d'adaptation entre plants.
+Il a entre autre été observé par \cite{gul_hydrotropism_2023} que différentes espèces/variétés peuvent avoir un hydrotropisme plus ou moins important illustrant ces différences d'adaptation entre les plantes.
 
 \subsubsection{Caractéristiques anatomiques}
 
 L'anatomie racinaire impacte l'entrée des ressources dans la plante et l'efficacité avec laquelle elles sont allouées en son sein.
 Il est donc intéressant de s'y attarder pour modifier l'architecture hydraulique des racines et ainsi améliorer la résistance au stress.
 Un segment racinaire se différencie par sa conduction hydraulique axiale et radiale ainsi que la conductance du chemin le plus court qui le relie à la base de la tige \citep{lobet_plant_2014}.
-\citep{wasson_traits_2012} avancent que de plus grandes conductivités axiale et radiale augmentent la capacité de la plante à récupérer et à transporter l'eau contenue dans les sols profonds. 
+\cite{wasson_traits_2012} avancent que de plus grandes conductivités axiale et radiale augmentent la capacité de la plante à récupérer et à transporter l'eau contenue dans les sols profonds. 
 \newline
 
 \noindent \textbf{Conductivité radiale}
@@ -174,13 +174,13 @@ Les structures hydrophobes peuvent, par exemple, être mises en place suite à u
 
 \noindent \textbf{Conductivité axiale}
 
-La conductivité axiale mesure le déplacement de la sève minérale au sein de la plante.
-Celle-ci peut, comme la conductivité radiale, être altérée par des mécanismes qui l'influence à long et court terme.
-Parmi les caractéristiques qui impactent sur le long terme, on retrouve : la taille, le nombre et la qualité d'interconnexions des vaisseaux de xylème qui sont les conduits du flux axial.
+La conductivité axiale mesure le déplacement hydrique au sein de la plante.
+Celle-ci peut, comme la conductivité radiale, être altérée par des mécanismes qui l'influencent à long et court terme.
+Parmi les caractéristiques qui impactent sur le long terme, on retrouve : la taille, le nombre et la qualité d'interconnexions des vaisseaux de xylèmes qui sont les conduits du flux axial.
 En ce qui concerne l'influence à court terme de la conductivité axiale, les principaux phénomènes sont les embolies causées par des cavitations dans les vaisseaux de xylèmes.
 La cavitation intervient lorsque la tension créée dans le xylème par la transpiration des feuilles devient trop importante.
 Il se crée alors des bulles de gaz dans le xylème, ce qui rend les vaisseaux concernés hermétiques au passage de l'eau, ce qui limite ainsi les flux d'eau aux autres vaisseaux qui n'ont pas de cavités.
-Il a été montré par \cite{delzon_mechanism_2010} que la susceptibilité à la cavitation est liée à la taille des vaisseaux de xylème, à la rugosité des parois et à l'abondance de perforation dans le xylème.
+Il a été montré par \cite{delzon_mechanism_2010} que la susceptibilité à la cavitation est liée à la taille des vaisseaux de xylème, à la rugosité des parois et à l'abondance de perforations dans le xylème.
 Optimiser ces caractéristiques peut donc participer à réduire les phénomènes de cavitation dans les plantes.
 \newline
 
@@ -191,7 +191,6 @@ Son intérêt dans les racines a longtemps été réduit à faciliter des transf
 Cependant, il est aujourd'hui également considéré que sa présence permet une meilleure exploration des sols par les racines en réduisant leurs coûts métaboliques.
 Le RCA réduit les besoins en respirations et en nutriments des tissus racinaires, ce qui permet une plus grande croissance racinaire pour un même coût métabolique.
 Sa présence est donc favorable dans des conditions déficitaires en eau bien que l'aérenchyme peut réduire le flux d'eau radiale dans les racines.
-
 
 \subsubsection{Caractéristiques physiologiques}
 
@@ -222,7 +221,7 @@ De plus, il serait également nécessaire de prendre en compte des aspects struc
 \begin{figure}[ht]
 \centering
 \includegraphics[width=1\textwidth]{Image/modelling_b.png}
-\caption{Quantifier les relations hydriques dans le système sol-plante. Réseaux réduit de \cite{passot_connecting_2018}}
+\caption{Quantifier les relations hydriques dans le système sol-plante. Réseau réduit de \cite{passot_connecting_2018}}
 \label{fig:modelling}
 \end{figure}
 
@@ -247,7 +246,7 @@ De l'autre côté, l'utilisation d'un proxy sur des données "réalistes" en cha
 L'observation d'échantillon pour l'anatomie racinaire présente plus de facilité que pour l'architecture.
 En effet, une section racinaire transversale au microscope permet une vue globale de l'anatomie racinaire d'une racine.
 Il n'est alors, dans la majorité des cas, pas trop difficile de parvenir à voir clairement l'ensemble de l'anatomie sans avoir à faire trop de manipulations comme cela peut être le cas pour l'architecture.
-Un autre avantage est qu'il n'est pas nécessaire d'observer l'anatomie au cours du temps, un échantillon de fin de culture suffit souvent dans le cas de l'anatomie.
+Un autre avantage est qu'il n'est pas forcément nécessaire d'observer l'anatomie au cours du temps, un échantillon de fin de culture suffit souvent dans le cas de l'anatomie.
 
 \subsubsection{Modélisation structurelle}
 
@@ -259,7 +258,7 @@ Il suffit alors de tracer une partie de l'anatomie/architecture et d'en extraire
 Chaque modèle se base sur un nombre limité de paramètres requis en input qui sont ainsi considérés comme plus représentatifs d'une architecture/anatomie racinaire.
 Les autres caractéristiques sont dans ce cas stochastiques ou construites sur base des inputs.
 L'utilisation de tel ou tel modèle demande donc de sélectionner les inputs qui seront considérés.
-Cela permet finalement de générer bon nombre d'architectures de systèmes racinaires parfois très contrastés les unes des autres.
+Cela permet finalement de générer bon nombre d'architectures de systèmes racinaires parfois très contrastées les unes des autres.
 \newline
 
 La figure \ref{fig:structure generation}, qui condense la partie structurelle du réseau précédemment présenté (figure \ref{fig:modelling}), illustre la démarche globale permettant la génération de structures racinaires (anatomique ou architecturale).
@@ -297,11 +296,11 @@ En effet, le sorgho est connu pour avoir une grande tolérance face à la séche
     \item Fixation du carbone en C4 qui permet de limiter les pertes d'eau par l'ouverture des stomates nécessaire pour la photosynthèse. Les plantes en C4 ont ainsi une meilleure efficience photosynthétique et sont plus adaptées aux climats chaud et sec \citep{shanker_c4_2011}.
     \item Un rapport $\frac{racines}{pousses}$ qui augmente lorsqu'il y a une diminution de l'humidité du sol, ce qui représente un mécanisme de survie face à la sécheresse \citep{mwamahonje_drought_2021}.
     \item L'aptitude "Stay-green" qui représente une bonne adaptation à la sécheresse.
-    Celui-ci consiste pour la plante à réduire la taille du couvert à la floraison, ce qui permet d'assurer une disponibilité en eau suffisante pendant le remplissage des grains et ainsi de meilleurs rendements en cas de sécheresse.
+    Celle-ci consiste pour la plante à réduire la taille du couvert à la floraison, ce qui permet d'assurer une disponibilité en eau suffisante pendant le remplissage des grains et ainsi de meilleurs rendements en cas de sécheresse.
     \item Un système racinaire réputé assez profond et étendu.
 \end{itemize}
 Le sorgho est donc une culture idéale dans les régions où l'eau et les nutriments sont limités. 
-En étudiant le système racinaire du sorgho, il serait intéressant de comprendre comment les racines de cette plante participent à la résilience hydrique de la plante.
+En étudiant le système racinaire du sorgho, il serait intéressant de comprendre comment les racines de cette plante participent à sa résilience hydrique.
 \newline
 
 Le système racinaire du sorgho est déjà caractérisé de "robuste" et participerait effectivement à faire face aux conditions environnementales difficiles, notamment la pénurie d'eau.
@@ -316,7 +315,7 @@ Le schéma \ref{fig:RSA} illustre l'organisation classique du système racinaire
 
 Au début de la germination, le sorgho développe une seule racine primaire qui produit de nombreuses ramifications secondaires.
 Le sorgho, contrairement au maïs, ne développe pas de racine séminale en plus de la racine primaire.
-Les racines nodales se forment ensuite successivement, prenant la place de la racine séminale qui disparaît progressivement.
+Les racines nodales se forment ensuite successivement, prenant la place de la racine primaire qui disparaît progressivement.
 Les nœuds souterrains produisent une quantité croissante de racines nodales en fonction de leur position.
 Lorsque les racines nodales se développent à partir des nœuds aériens, leur insertion est nettement verticillée \citep{kumar_goyal_how_2021}.
 \newline
@@ -325,4 +324,4 @@ Plusieurs acteurs de l'agriculture en Belgique s'intéressent depuis quelques an
 On retrouve, entre autre, le Centre Indépendant de Promotion Fourragère (CIPF).
 Le CIPF expérimente et vulgarise différents sujets liés aux cultures de maïs, miscanthus, silphie ou encore le sorgho.
 Ainsi, depuis 2013, le CIPF réalise différents tests culturaux sur le sorgho afin d'étudier l'intérêt agronomique que peuvent avoir les différentes variétés.
-Il partage ensuite les résultats obtenus dans le but de conseiller/déconseiller une culture de sorgho.
+Il partage ensuite les résultats obtenus dans le but de conseiller/déconseiller ces cultures.
