--- a/Ecrit/Memoire Degives Nicolas/Content/4-Objectives.tex
+++ b/Ecrit/Memoire Degives Nicolas/Content/4-Objectives.tex
@@ -17,12 +17,12 @@ Les objectifs sont alors :
 \begin{enumerate}
     \item Caractériser et quantifier le système racinaire de six variétés de sorgho testées au CIPF. 
     \item Identifier les potentielles différences entre ces variétés.
-    \item Modéliser l'architecture du système racinaire du sorgho.
-    \item Comparer les modélisations de systèmes de sorgho à ceux du maïs (similaire mais moins tolérant au stress hydrique).
+    \item Modéliser les architectures des systèmes racinaires de ces variétés.
+    \item Comparer les modélisations de systèmes racinaires de sorgho à ceux du maïs (similaire mais moins tolérant au stress hydrique).
 \end{enumerate}
 
 Plus globalement, ce travail s'inscrit dans une étude qui vise à comprendre les flux hydriques au sein des plantes.
-Dans l'optique, nécessaire à ce jour, de sélection variétale et génétique de culture plus résilientes aux fréquentes sécheresses, le sorgho a aujourd'hui une avance confortable.
+Dans l'optique, nécessaire à ce jour, de sélection variétale et génétique de cultures plus résilientes aux fréquentes sécheresses, le sorgho a aujourd'hui une avance confortable.
 Comprendre comment le système racinaire du sorgho participe à lui offrir une meilleure tolérance aux stress hydriques que le maïs offre des pistes pour la sélection des variétés d'une multitude d'autres espèces face aux changements climatiques.
 Néanmoins, ce travail est loin d'être exhaustif et ne peut, à son échelle, qu'apporter une pierre à l'édifice du travail de recherche bien large sur les flux hydriques au sein des plantes. 
 Comme mentionné précédemment, la modélisation de système racinaire seule n'a que peu de valeur.
