--- a/Ecrit/Memoire Degives Nicolas/main.tex
+++ b/Ecrit/Memoire Degives Nicolas/main.tex
@@ -48,7 +48,9 @@
 
 \printbibliography
 \newpage
-
+\thispagestyle{empty} % Supprime les numéros de page et l'en-tête de cette page
+\mbox{} % Ajoute un espace vide pour remplir la page blanche
+\newpage
 % Pour commencer les annexes
 \appendix
 \pagenumbering{Roman}
