--- a/Ecrit/Memoire Degives Nicolas/Content/6-Results.tex
+++ b/Ecrit/Memoire Degives Nicolas/Content/6-Results.tex
@@ -1,20 +1,19 @@
 \section{Résultats}
 
 Cette section reprend, dans un premier temps, les résultats des analyses faites sur les parties aériennes et racinaires des plantes des six variétés étudiées.
-Ensuite sont présentés les modélisations de systèmes racinaires de sorgho réalisées par ArchiSimple sur base des paramètres estimés.
+Ensuite sont présentées les modélisations de systèmes racinaires de sorgho réalisées par ArchiSimple sur base des paramètres estimés.
 Tous les codes Rmd écrits en vue de l'obtention des graphes présentés sont accessible sur \href{https://github.com/ndegives/Memoire}{Github}.
 De même que les rapports au format HTML liés à ces codes.
 
 \subsection{Partie aérienne}
 
-Les rendements en matière sèche des différentes variétés de sorgho considérées en 2020, 2021 et 2022 figure sur la figure \ref{fig:rendement}.
-Un diagramme ombrothermique reprenant température et précipitation observés durant les trois durées de culture est disponible en annexe \ref{an:aerial}
-
+Les rendements en matière sèche des différentes variétés de sorgho considérées en 2020, 2021 et 2022 sont présentés sur la figure \ref{fig:rendement}.
+Un diagramme ombrothermique reprenant températures et précipitations observés durant les trois durées de culture est disponible en annexe \ref{an:aerial}
 
 \begin{figure}[ht]
 \centering
 \includegraphics[width=0.6\textwidth]{Image/rendement.png}
-\caption{Rendement des parties aériennes de plant de sorgho en fonction de l'année et de la variété}
+\caption{Rendement des parties aériennes de plants de sorgho en fonction de l'année et de la variété}
 \label{fig:rendement}
 \end{figure}
 
@@ -27,20 +26,20 @@ avec :
     \item $\mu$ : la moyenne générale
     \item $\alpha_i$ : effet de la variété i 
     \item $\beta_j$ : effet de l'année j
-    \item $\gamma_{ij}$ : effet d'interaction entre variétés et année
+    \item $\gamma_{ij}$ : effet d'interaction entre variété et année
     \item $\epsilon_{ijk}$ : la fluctuation aléatoire entre l'observation k et la moyenne du traitement. 
 \end{itemize}
 
 Malheureusement, n'ayant qu'une seule donnée par traitement, le cas d'un plan sans répétition se présente.
 Afin de pouvoir tester les facteurs de variétés et d'années, il est nécessaire de supposer un effet d'interaction nul, or, il semble y en avoir un au vu de la figure \ref{fig:rendement}.
 Le modèle serait dès lors largement faussé et ne sera donc pas développé.
-On peut toutefois remarquer que les variétés Amiggo et Juno paraissent se démarquer des autres par des rendements relativement plus élevés que les autres.
+On peut toutefois remarquer que les variétés Amiggo et Juno paraissent se démarquer des autres par des rendements relativement plus élevés.
 
 \subsection{Caractérisation de l'architecture racinaire}
 
 Cette section est dédiée au développement des estimations des cinq paramètres principaux précédemment décrits.
 D'autres paramètres de ArchiSimple (EL, dSem, dAdv) sont également détaillés, car ceux-ci occupent une place centrale au vu du fonctionnement du modèle.
-Les autres paramètres, provenant d'échantillons ou source comme décrit préalablement, ne seront pas différenciés entre variétés ni détaillés dans ce travail.
+Les autres paramètres, provenant d'échantillons ou sources comme décrit préalablement, ne seront pas différenciés entre variétés ni détaillés dans ce travail.
 Ceux-ci sont, pour la plupart, calculés comme la moyenne observée sur tous les échantillons.
 Seul CVDD est estimé comme la relation linéaire entre la valeur absolue des résidus du modèle DIDm et les valeurs estimées par celui-ci.
 Les graphes et tableaux développant cette régression linéaire sont disponibles en annexe \ref{an:CVDD}.
@@ -76,7 +75,7 @@ Les résultats du modèle sont repris dans la table \ref{tab:summary Dmin} ci-de
     \label{tab:summary Dmin}
 \end{table}
 
-La valeur de Dmin retenue pour l'estimation du paramètre Dmin est alors l'estimation du modèle pour la variété Vegga et la moyenne arithmétique des cinq autres variétés pour les autres, soit :
+La valeur retenue pour l'estimation du paramètre Dmin est alors l'estimation du modèle pour la variété Vegga et la moyenne arithmétique des cinq autres variétés pour les autres, soit :
 
 \begin{equation}
     D_{min} = 
@@ -99,7 +98,7 @@ Les distributions des diamètres de racines nodales en fonction de la variété 
 \newpage
 
 Similairement à ce qui a été observé pour Dmin, la distribution des diamètres des racines nodales est fortement similaire pour les six variétés.
-Cet aperçu visuel est dans ce cas-ci confirmé par le test ANOVA (table \ref{tab:anova Dmax}) qui confirme l'égalité des distributions de diamètre de racines nodales des différentes variétés (p-valeur > $\alpha$ = 0.05).
+Cet aperçu visuel est dans ce cas-ci confirmé par le test ANOVA (table \ref{tab:anova Dmax}) qui confirme l'égalité de ces distributions (p-valeur > $\alpha$ = 0.05).
 
 \begin{table}[!ht]
     \centering
@@ -108,7 +107,7 @@ Cet aperçu visuel est dans ce cas-ci confirmé par le test ANOVA (table \ref{ta
     \label{tab:anova Dmax}
 \end{table}
 
-L'estimation du paramètre Dmax sera dès lors la même pour les six variétés.
+L'estimation du paramètre Dmax est dès lors la même pour les six variétés.
 Celui-ci sera alors égal au diamètre maximum observé au sein de tous les échantillons, soit : $D_{max} = 6.984537$ mm.
 Le modèle (non signifiatif dans ce cas) est développé en annexe \ref{an:Dmax} ainsi que les tests sur les hypothèses du modèle.
 
@@ -117,6 +116,7 @@ Le modèle (non signifiatif dans ce cas) est développé en annexe \ref{an:Dmax}
 Les boxplots de Drange pour les six variétés sont présentés figure \ref{fig:boxplot Drange} ci-dessous.
 On retrouve, à nouveau, beaucoup de similitudes entre les variétés et le test de variance du modèle (table \ref{tab:anova Drange}) ne laisse pas croire à une différence significative entre les variétés.
 Les hypothèses relatives à l'utilisation du modèle sont présentées en annexe \ref{an:Drange}.
+\newpage
 
 \begin{figure}[ht]
 \centering
@@ -140,6 +140,7 @@ L'estimation de celui-ci offre toutefois une vision globale des diamètres des d
 \subsubsection{IBD : La distance entre latérales}
 
 Les Boxplots des distances inter-primordium en fonction de la variété est présenté ci-dessous dans la figure \ref{fig:boxplot IBD}.
+\newpage
 
 \begin{figure}[ht]
 \centering
@@ -162,6 +163,7 @@ La figure \ref{fig:inférence IBD} illustre les estimations faites par le modèl
 Celles-ci sont relativement semblables pour toutes les variétés excepté Vegga qui, à nouveau, a une estimation plus élevée.
 Des contrastes ont été réalisés afin d'avoir un test statistique plus spécifique à la variété Vegga.
 Ces contrastes confirment une fois de plus que les estimations pour les différentes variétés ne peuvent pas être considérées comme étant différentes pour un niveau de confiance de $\alpha = 0.05$.
+\newpage
 
 \begin{figure}[ht]
 \centering
@@ -199,7 +201,7 @@ Y_{ij}=\beta_{0}+\beta_{1}*X_{ij}+\alpha_{i}+\gamma_{i}*X_{ij}+\epsilon_{ij}
 \end{equation}
 Avec : 
 \begin{itemize}
-    \item $\beta_{0}$ = l'intercepte de la régression linéaire de Amiggo.
+    \item $\beta_{0}$ : l'intercepte de la régression linéaire de Amiggo.
     \item $\beta_{1}$ : effet du diamètre mère sur le diamètre fille pour Amiggo.
     \item $\alpha_{i}$ : effet de la variété sur l'intercepte par rapport à Amiggo.
     \item $\gamma_{i}$ : effet d'interaction diamètre mère et variétés.
@@ -219,7 +221,7 @@ Les estimations des paramètres du modèle sont présentés dans la table \ref{t
 Tous les paramètres semblent induire une différence notable dans l'estimation, à l'exception des paramètres des variétés Juno et Swingg.
 Cette similitude s'observe sur la figure \ref{fig:plot DIDm} ou les interceptes de ces deux variétés sont très proches.
 La même conclusion peut être tirée de l'observation des contrastes en annexe \ref{an:DIDm}.
-Les estimations de DIDm qui sera retenue pour le paramètre DIDm sera l'estimation du modèle pour les différentes variétés telles que repris dans la table \ref{tab:emmeans DIDm}
+L'estimation du paramètre DIDm sera la prédiction du modèle pour les différentes variétés telles que repris dans la table \ref{tab:emmeans DIDm}.
 
 \begin{table}[ht]
     \centering
@@ -230,7 +232,7 @@ Les estimations de DIDm qui sera retenue pour le paramètre DIDm sera l'estimati
 
 \subsubsection{EL : l'élongation en fonction du diamètre}
 
-EL correspond à la pente de la relation observée entre le diamètre des racines primaires et leur croissance.
+EL correspond à la relation observée entre le diamètre des racines primaires et leur croissance.
 La figure \ref{fig:EL} ci-dessous illustre les données provenant des échantillons en rhizotron ainsi que la régression linéaire estimée par la fonction lm() en R.
 \newpage
 
@@ -242,7 +244,7 @@ La figure \ref{fig:EL} ci-dessous illustre les données provenant des échantill
 \end{figure}
 
 L'estimation de EL utilisée dans le modèle pour les six variétés de sorgho correspond à la pente de la régression linéaire, soit $EL= 33.03$.
-Le choix a été fait de ne pas imposer l'intercepte de cette courbe à passer par l'origine dès lors que le modèle se base sur un Dmin différent de 0 pour définir l'arrêt de la croissance d'une racine.
+Le choix a été fait de ne pas imposer l'intercepte de cette droite à passer par l'origine dès lors que le modèle se base sur un Dmin différent de 0 pour définir l'arrêt de la croissance d'une racine.
 Par ailleur, cette relation peut également fournir une estimation de diamètre minimum au-delà duquel l'élongation racinaire est arrêtée (Dmin) en suivant le raisonnement suivant :
 \begin{equation}
     \begin{cases}
@@ -253,11 +255,11 @@ Par ailleur, cette relation peut également fournir une estimation de diamètre 
 
 Cette estimation de Dmin est nettement supérieure à ce qui a été observé (0.2197 vs 0.1297 et 0.1567) et ne sera dès lors pas retenue pour l'estimation du paramètre Dmin.
 
-\subsubsection{dSem et dAdv : les diamètres relatif de racines séminales et adventives}
+\subsubsection{dSem et dAdv : les diamètres relatifs de racines séminales et adventives}
 
-Les diamètres relatifs des racines séminale et adventive, respectivement dSem et dAdv dans le modèle, sont mesurés sur base du diamètre maximal Dmax.
-dSem est dès lors estimé par le ratio entre la moyenne des diamètres de racines primaires observées et Dmax soit $dSem=\frac{0.5648[mm]}{6.9845[mm]} = 0.08087$
-L'estimation de dAdv est quant à elle faite sur base du ratio entre Dmax et la moyenne des diamètres de racines adventive observée, soit $dAdv = \frac{2.3795[mm]}{6.9845[mm]} = 0.3407$
+Les diamètres relatifs des racines séminales et adventives, respectivement dSem et dAdv dans le modèle, sont mesurés sur base du diamètre maximal Dmax.
+dSem est dès lors estimé par le ratio entre la moyenne des diamètres de racines primaires et Dmax soit $dSem=\frac{0.5648[mm]}{6.9845[mm]} = 0.08087$
+L'estimation de dAdv est quant à elle faite sur base du ratio entre la moyenne des diamètres de racines adventives et Dmax, soit $dAdv = \frac{2.3795[mm]}{6.9845[mm]} = 0.3407$.
 Les deux paramètres sont supposés égaux pour toutes les variétés dès lors qu'il a été observé que les distributions des diamètres de racines primaires et nodales ne pouvaient pas être considérées comme significativement différentes auparavant.
 
 \subsubsection{Tous les paramètres du modèle ArchiSimple}
@@ -273,20 +275,20 @@ La table \ref{tab:esti.archisimple} reprend les estimations de tous les paramèt
 
 \subsection{Simulation d'architecture de système racinaire avec ArchiSimple}
 
-La durée de simulation a été fixée jusqu'à la fin de la phase végétative, soit environ 40 jours.
-\cite{pellerinand_evaluation_1994} observaient que l'extension du système racinaire atteint un maximum quelques jours après la fin de la phase végétative chez le maïs.
+La durée de simulation a été fixée à la fin de la phase végétative, soit environ 40 jours.
+\cite{pellerinand_evaluation_1994} observaient que l'extension du système racinaire est réduite quelques jours après la fin de la phase végétative chez le maïs.
 Les systèmes racinaires générés par ArchiSimple sont présentés dans la figure \ref{fig:roots} ci-dessous.
 \newpage
 
 \begin{figure}[ht]
 \centering
 \includegraphics[width=1\textwidth]{Image/roots.png}
-\caption{Résultats des modélisations des six variétés}
+\caption{Résultats des modélisations des six variétés après 40 jours}
 \label{fig:roots}
 \end{figure}
 
 On observe, comme décrit dans la littérature, un système racinaire construit avec des racines adventives de grands diamètres.
-Celle-ci s'enfonce profondément dans le sol et donne lieu à des racines latérales qui permettent une meilleure exploration du sol.
+Celles-ci s'enfoncent profondément dans le sol et donnent lieu à des racines latérales qui permettent une meilleure exploration du sol.
 Afin de voir comment se construisent ces systèmes racinaires, la figure \ref{fig:roots_day} affiche l'évolution du système racinaire depuis le 10ème jour jusqu'au 40ème par pas de temps de cinq jours pour la variété Amiggo.
 \newpage
 
